--- a/TodoList/Views/ApplicationUsers/Index.cshtml
+++ b/TodoList/Views/ApplicationUsers/Index.cshtml
@@ -1,103 +1,86 @@
 ﻿@model IEnumerable<TodoList.Models.ApplicationUser>
 
 @{
-    ViewBag.Title = "Kullanıcı Listesi";
+    ViewBag.Title = "Kullanıcılar";
 }
 
-<h2>Kullanıcı Listesi</h2>
+<h2>Kullanıcılar</h2>
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Register","Account")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @*@Html.DisplayNameFor(model => model.Email)*@
-            E-Posta
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.EmailConfirmed)*@
-            Email Onay
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.PasswordHash)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecurityStamp)
-        </th>*@
-        <th>
-            @*@Html.DisplayNameFor(model => model.PhoneNumber)*@
-            Telefon
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.PhoneNumberConfirmed)*@
-            Telefon Onay
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.TwoFactorEnabled)*@
-            İki Aşamalı Kimlik Doğrulama Etkin
+<table id="tblRecords" class="table">
+    <thead>
+        <tr>
+            <th class="text-nowrap all">
+                E-Posta
+            </th>
+            <th class="text-nowrap">
+                Email Onay
+            </th>
+            <th class="text-nowrap">
+                Telefon
+            </th>
+            <th class="text-nowrap">
+                Telefon Onay
+            </th>
+            <th class="text-nowrap">
+                İki Aşamalı Kimlik Doğrulama Etkin
+            </th>
+            <th class="text-nowrap">              
+                Kilitleme Bitiş Tarihi
+            </th>
+            <th class="text-nowrap">              
+                Kilitleme Etkin
+            </th>
+            <th class="text-nowrap">            
+                Başarısız Erişim Sayısı
+            </th>
+            <th class="text-nowrap">              
+                Kullanıcı Adı
+            </th>
+            <th data-orderable="false" class="all">Eylemler</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
 
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.LockoutEndDateUtc)*@
-            Kilitleme Bitiş Tarihi
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.LockoutEnabled)*@
-            Kilitleme Etkin
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.AccessFailedCount)*@
-            Başarısız Erişim Sayısı
-        </th>
-        <th>
-            @*@Html.DisplayNameFor(model => model.UserName)*@
-            Kullanıcı Adı
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-       <td>
-            @Html.DisplayFor(modelItem => item.EmailConfirmed)
-        </td>
-       @* <td>
-        @Html.DisplayFor(modelItem => item.PasswordHash)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.SecurityStamp)
-    </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessFailedCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
-            @Html.ActionLink("Ayrıntılar", "Details", new { id = item.Id }, new { @class = "btn btn-success" })
-            @Html.ActionLink("Sil", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
-
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmailConfirmed)
+                </td>
+               
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LockoutEnabled)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AccessFailedCount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Ayrıntılar", "Details", new { id = item.Id }, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Sil", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
