--- a/TodoList/Views/TodoItems/Index.cshtml
+++ b/TodoList/Views/TodoItems/Index.cshtml
@@ -15,103 +15,103 @@
             <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Category)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Department)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Manager)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Organizator)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Side)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Attachment)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.MeetingDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.PlannedDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.FinishDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.ReviseDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.ConversationSubject)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.SupporterCompany)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.SupporterDoctor)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.ConversationAttendeeCount)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.ScheduledOrganizationDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.MailingSubjects)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.PosterSubject)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.PosterCount)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.Elearning)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.TypesOfScans)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.AsoCountInScans)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.TypesOfOrganization)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.AsoCountInOrganizations)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.TypesOfVaccinationOrganization)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.AsoCountInVaccinationOrganization)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.AmountOfCompensationForPoster)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.CorporateProductivityReport)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
             <th class="text-nowrap all">
@@ -229,9 +229,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.UpdatedBy)
                 </td>
-                <td>
-                    @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" }) |
-                    @Html.ActionLink("Ayrıntılar", "Details", new { id = item.Id }, new { @class = "btn btn-success" }) |
+                <td class="text-nowrap">
+                    @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Ayrıntılar", "Details", new { id = item.Id }, new { @class = "btn btn-success" })
                     @Html.ActionLink("Sil", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
