--- a/TodoList/Views/Categories/Edit.cshtml
+++ b/TodoList/Views/Categories/Edit.cshtml
@@ -25,6 +25,14 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         @Html.HiddenFor(model => model.CreateDate)
 
         @Html.HiddenFor(model => model.CreatedBy)
